@@ -15,7 +15,8 @@ Version 2.1.0 - SVN
  - Fix include test for Text_Highlighter to cope with missing PEAR.php.
  - Fix password generation for more than one team.
  - Fix test-logic bug in judge/check_program.sh: reversing judging outcomes.
- - Make warning and error beeps default to something more noticeable
+ - Make warning and error beeps default to something more noticeable.
+ - Let show_source cope with empty file submissions gracefully.
 
 Version 2.0.0 - SVN
 -------------------
